# provenance-token-contract

./: Cargo.toml  Makefile  README.md
contracts/custom-marker/: Cargo.toml  Makefile  README.md
contracts/custom-marker/artifacts/: checksums.txt  checksums_intermediate.txt  custom_marker.wasm
contracts/custom-marker/parameters/: activate.json  addToBlacklist.json  burn.json  cancel.json  createMarker.json  createmarker.json  destroy.json  finalize.json  getAuthorizeCountries.json  getBalances.json  getByAddress.json  getByDenom.json  getFreezedAccounts.json  getShareHolders.json  grantAccess.json  init.json  mint.json  removeBalance.json  subFromFrozenList.json  transfer.json  userGrantAccess.json  withdraw.json
contracts/custom-marker/schema/: custom-marker.json
contracts/custom-marker/schema/raw/: execute.json  instantiate.json  query.json  response_to_get_balances.json  response_to_get_freezed_accounts.json  response_to_get_share_holders.json
contracts/custom-marker/scripts/deploy/: deploy.sh
contracts/custom-marker/scripts/execute/: activate.sh  addBalances.sh  addToBlacklist.sh  burn.sh  cancel.sh  createMarker.sh  destroy.sh  discardUserFromFrozenList.sh  finalize.sh  grantAccess.sh  mint.sh  removeBalances.sh  subFromFrozenList.sh  transfer.sh  withdraw.sh
contracts/custom-marker/scripts/init/: init.sh  name.sh
contracts/custom-marker/scripts/query/: getAuthorizedCountries.sh  getBalances.sh  getByAddress.sh  getByDenom.sh  getFreezedAccounts.sh  (+1 more)
contracts/custom-marker/src/: contract.rs  error.rs  helper.rs  lib.rs  msg.rs  state.rs  tests.rs
(+42 files in other folders)
